// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots Pages/PureFooter With Newsletter 1`] = `
<footer
  class="footer"
>
  <div
    class="container"
  >
    <div
      class="tablet-blobs pt flex-align-items-stretch"
    >
      <div
        class="tablet-blob-1 desktop-blob-1-3"
      >
        <ul
          class="list-sans text-decoration-none li-sep mb-0"
        >
          <li>
            <a
              href="https://economie.gouv.fr/"
            >
              Ministère de l'Économie, des Finances et de la Souveraineté industrielle et numérique
            </a>
          </li>
          <li>
            <a
              href="https://ecologie.gouv.fr/"
            >
              Ministère de la Transition écologique
            </a>
          </li>
          <li>
            <a
              href="https://onf.fr/"
            >
              Office National des forêts
            </a>
          </li>
          <li>
            <div
              class="blobs"
            >
              <div
                class="blob-1-3"
              >
                <img
                  class="sponsor"
                  src="/img/logo-fabriquenumerique.svg"
                />
              </div>
              <div
                class="blob-2-3"
              >
                <p
                  class="h6 mb-0"
                >
                   La Fabrique numérique du Ministère de la Transition écologique, membre du réseau 
                  <a
                    href="http://beta.gouv.fr"
                  >
                    beta.gouv.fr
                  </a>
                  . 
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="tablet-blob-1-2 desktop-blob-1-3 flex flex-direction-column"
      >
        <ul
          class="list-prefix text-decoration-none li-mb-s"
        >
          <li>
            <router-link
              to="/contacts"
            >
              Contact
            </router-link>
          </li>
          <li>
            <router-link
              to="/a-propos"
            >
              À propos
            </router-link>
          </li>
          <li>
            <router-link
              to="/mentions-legales"
            >
              Mentions légales
            </router-link>
          </li>
          <li>
            <router-link
              to="/cgu"
            >
              CGU
            </router-link>
          </li>
          <li>
            <router-link
              to="/accessibilite"
            >
              Accessibilité : non conforme
            </router-link>
          </li>
          <li>
            <router-link
              to="/contribution"
            >
              Contribution
            </router-link>
          </li>
        </ul>
      </div>
      <div
        class="tablet-blob-1-2 desktop-blob-1-3 flex flex-direction-column"
      >
        <div
          class="mb-xxs"
        >
          <h5>
            Newsletter
          </h5>
          <div
            class="blobs-mini mb"
          >
            <div
              class="blob-mini-2-3"
            >
              <input
                class="p-s rnd-l-xs small"
                placeholder="Email"
                type="text"
              />
            </div>
            <div
              class="blob-mini-1-3"
            >
              <button
                class="btn rnd-r-xs p-s full-x small"
              >
                 S'inscrire 
              </button>
            </div>
          </div>
        </div>
        <ul
          class="list-prefix text-decoration-none li-mb-s"
        >
          <li>
            <a
              href="https://www.dailymotion.com/camino-le-cadastre-minier"
              rel="noopener noreferrer"
              target="_blank"
            >
              Tutoriels
            </a>
          </li>
          <li>
            <a
              href="https://docs.camino.beta.gouv.fr/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Open data et documentation
            </a>
          </li>
          <li>
            <a
              href="http://www.mineralinfo.fr/"
              rel="noopener noreferrer"
              target="_blank"
            >
              MineralInfo 
            </a>
          </li>
          <li>
            <a
              href="http://www.minergies.fr/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Minergies 
            </a>
          </li>
        </ul>
        <p
          class="h6 flex-bottom flex-self-end"
        >
          <a
            class="text-decoration-none"
            href="https://github.com/MTES-MCT/camino/releases"
            rel="noopener noreferrer"
            target="_blank"
          >
            Version 310c30f5b4d779cd4bc17316f4b026292bb95c10
          </a>
        </p>
      </div>
      <div
        style="bottom: 20px; position: fixed; right: 16px; z-index: 10001;"
      >
        <a
          href="https://jedonnemonavis.numerique.gouv.fr/Demarches/3390?&view-mode=formulaire-avis&nd_mode=en-ligne-enti%C3%A8rement&nd_source=button&key=da03d611d9055a97a214b2623f034e40"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Je donne mon avis"
            src="/img/je-donne-mon-avis.svg"
            style="max-width: 120px;"
          />
        </a>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Automated Storybook Snapshots Pages/PureFooter Without Newsletter 1`] = `
<footer
  class="footer"
>
  <div
    class="container"
  >
    <div
      class="tablet-blobs pt flex-align-items-stretch"
    >
      <div
        class="tablet-blob-1 desktop-blob-1-3"
      >
        <ul
          class="list-sans text-decoration-none li-sep mb-0"
        >
          <li>
            <a
              href="https://economie.gouv.fr/"
            >
              Ministère de l'Économie, des Finances et de la Souveraineté industrielle et numérique
            </a>
          </li>
          <li>
            <a
              href="https://ecologie.gouv.fr/"
            >
              Ministère de la Transition écologique
            </a>
          </li>
          <li>
            <a
              href="https://onf.fr/"
            >
              Office National des forêts
            </a>
          </li>
          <li>
            <div
              class="blobs"
            >
              <div
                class="blob-1-3"
              >
                <img
                  class="sponsor"
                  src="/img/logo-fabriquenumerique.svg"
                />
              </div>
              <div
                class="blob-2-3"
              >
                <p
                  class="h6 mb-0"
                >
                   La Fabrique numérique du Ministère de la Transition écologique, membre du réseau 
                  <a
                    href="http://beta.gouv.fr"
                  >
                    beta.gouv.fr
                  </a>
                  . 
                </p>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="tablet-blob-1-2 desktop-blob-1-3 flex flex-direction-column"
      >
        <ul
          class="list-prefix text-decoration-none li-mb-s"
        >
          <li>
            <router-link
              to="/contacts"
            >
              Contact
            </router-link>
          </li>
          <li>
            <router-link
              to="/a-propos"
            >
              À propos
            </router-link>
          </li>
          <li>
            <router-link
              to="/mentions-legales"
            >
              Mentions légales
            </router-link>
          </li>
          <li>
            <router-link
              to="/cgu"
            >
              CGU
            </router-link>
          </li>
          <li>
            <router-link
              to="/accessibilite"
            >
              Accessibilité : non conforme
            </router-link>
          </li>
          <li>
            <router-link
              to="/contribution"
            >
              Contribution
            </router-link>
          </li>
        </ul>
      </div>
      <div
        class="tablet-blob-1-2 desktop-blob-1-3 flex flex-direction-column"
      >
        <!--v-if-->
        <ul
          class="list-prefix text-decoration-none li-mb-s"
        >
          <li>
            <a
              href="https://www.dailymotion.com/camino-le-cadastre-minier"
              rel="noopener noreferrer"
              target="_blank"
            >
              Tutoriels
            </a>
          </li>
          <li>
            <a
              href="https://docs.camino.beta.gouv.fr/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Open data et documentation
            </a>
          </li>
          <li>
            <a
              href="http://www.mineralinfo.fr/"
              rel="noopener noreferrer"
              target="_blank"
            >
              MineralInfo 
            </a>
          </li>
          <li>
            <a
              href="http://www.minergies.fr/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Minergies 
            </a>
          </li>
        </ul>
        <p
          class="h6 flex-bottom flex-self-end"
        >
          <a
            class="text-decoration-none"
            href="https://github.com/MTES-MCT/camino/releases"
            rel="noopener noreferrer"
            target="_blank"
          >
            Version 310c30f5b4d779cd4bc17316f4b026292bb95c10
          </a>
        </p>
      </div>
      <div
        style="bottom: 20px; position: fixed; right: 16px; z-index: 10001;"
      >
        <a
          href="https://jedonnemonavis.numerique.gouv.fr/Demarches/3390?&view-mode=formulaire-avis&nd_mode=en-ligne-enti%C3%A8rement&nd_source=button&key=da03d611d9055a97a214b2623f034e40"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Je donne mon avis"
            src="/img/je-donne-mon-avis.svg"
            style="max-width: 120px;"
          />
        </a>
      </div>
    </div>
  </div>
</footer>
`;
